
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The main content view -->
    <RelativeLayout
        android:id="@+id/fullsetup"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?attr/categorybackcolor"

            android:layout_gravity="left|top"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/linearLayout"
            android:layout_centerInParent="true"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Content title"
                android:layout_marginLeft="12dp"
                android:padding="4dp"
                android:textSize="20sp"
                android:textColor="@color/White"
                android:id="@+id/contenttitle"
                android:gravity="clip_vertical" />



        </LinearLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/linearLayout"
            android:id="@+id/content_frame"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            </FrameLayout>
        <!--       <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                   xmlns:tools="http://schemas.android.com/tools"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="vertical"
                   tools:context=".MainActivity" >



                   <ListView
                       android:id="@+id/lvFeedItems"
                       android:layout_width="match_parent"
                       android:layout_height="0sp"
                       android:layout_weight="1">
                   </ListView>
                   <Button
                       android:id="@+id/btnLoad"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="Reload" />
               </LinearLayout>-->

    </RelativeLayout>




   <ScrollView
       android:id="@+id/drawer_list"
       android:layout_width="280dp"
       android:layout_height="fill_parent"
       android:background="?attr/navdrawercolor"
       android:overScrollMode="ifContentScrolls"
       android:scrollbarStyle="outsideOverlay"
       android:layout_gravity="start|center_vertical" >
<LinearLayout
    android:orientation="vertical"
    android:layout_height="fill_parent"
    android:layout_width="match_parent"
    android:gravity="center_vertical|clip_vertical">



    <LinearLayout
        android:id="@+id/newsitem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?attr/selectable"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="News"
            android:textColor="?attr/drawertextcolor"
            android:padding="16dp"
            android:textSize="22sp"/>
    </LinearLayout>







<!--    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/dividercolor" />-->




    <LinearLayout
            android:id="@+id/item1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
        android:background="?attr/selectable"
        android:gravity="center_vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/Cat1"
        android:paddingLeft="32dp"
        android:textSize="22sp"
        android:textColor="?attr/drawertextcolor"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp" />
</LinearLayout>







<!--    <View
        android:id="@+id/divide1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/dividercolor" />-->






    <LinearLayout
        android:id="@+id/item5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?attr/selectable"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/Cat5"
            android:paddingLeft="32dp"
            android:textColor="?attr/drawertextcolor"
            android:textSize="22sp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp" />

    </LinearLayout>







 <!--   <View
        android:id="@+id/divide2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/dividercolor" />-->








    <LinearLayout
        android:id="@+id/item8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?attr/selectable"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/Cat11"
            android:paddingLeft="32dp"
            android:textSize="22sp"
            android:paddingTop="16dp"
            android:textColor="?attr/drawertextcolor"
            android:paddingRight="16dp"
            android:paddingBottom="16dp" />

    </LinearLayout>





<!--    <View
        android:id="@+id/divide3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/dividercolor" />-->




    <LinearLayout
    android:id="@+id/item2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
        android:background="?attr/selectable"
        android:gravity="center_vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/Cat2"
        android:textColor="?attr/drawertextcolor"
        android:padding="16dp"
        android:textSize="22sp"/>
</LinearLayout>








<!--
    <View
        android:layout_width="match_parent"
        android:id="@+id/divide4"
        android:layout_height="1dp"
        android:background="?attr/dividercolor" />
-->








<LinearLayout
    android:id="@+id/item3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="?attr/selectable"
    android:gravity="center_vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/Cat3"
        android:padding="16dp"
        android:textColor="?attr/drawertextcolor"
        android:textSize="22sp"/>

</LinearLayout>










<!--    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/divide5"
        android:background="?attr/dividercolor" />-->








<LinearLayout
    android:id="@+id/item4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="?attr/selectable"
    android:gravity="center_vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/Cat4"
        android:textColor="?attr/drawertextcolor"
        android:padding="16dp"
        android:textSize="22sp"/>

</LinearLayout>







<!--
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/divide6"
        android:background="?attr/dividercolor" />
-->















<!--    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/divide7"
        android:background="?attr/dividercolor" />-->









    <LinearLayout
            android:id="@+id/item6"
            android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:orientation="horizontal"
        android:background="?attr/selectable"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/Cat6"
            android:textColor="?attr/drawertextcolor"
            android:padding="16dp"
            android:textSize="22sp"/>

</LinearLayout>

<!--    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/divide8"
        android:background="?attr/dividercolor" />-->



    <LinearLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?attr/selectable"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/Cat10"
            android:textColor="?attr/drawertextcolor"
            android:padding="16dp"
            android:textSize="22sp"/>

    </LinearLayout>

<!--    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/divide9"
        android:background="?attr/dividercolor" />-->

       </LinearLayout>
</ScrollView>
</android.support.v4.widget.DrawerLayout>
<!--     android:padding="4dp"   -->
<!--         android:background="@color/Navy" -->