<?xml version="1.0" encoding="utf-8"?>
<com.jakewharton.scalpel.ScalpelFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scalpel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" 
        android:gravity="center"
        android:padding="4dp"
        android:background="?attr/cardcolor"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/people_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" 
            android:layout_gravity="center"/>
    </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="4dp"
                    android:background="?attr/cardcolor">
                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:ems="10"
                        android:hint="@string/Subject"
                        android:textColor="?attr/descriptiontext"
                        android:gravity="top">
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="15"
                    android:padding="4dp"
                    android:background="?attr/cardcolor"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/editText1"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:ems="10"
                        android:hint="@string/Compose"
                        android:inputType="textMultiLine"
                        android:gravity="top" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:padding="4dp"
                    android:background="?attr/cardcolor">
                    <Button
                        android:id="@+id/sendbutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Send"
                        android:layout_gravity="center_vertical"/>
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:id="@+id/senttext"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>
</LinearLayout>
</com.jakewharton.scalpel.ScalpelFrameLayout>